--- a/frontend-react-typescript/package.json
+++ b/frontend-react-typescript/package.json
@@ -40,6 +40,7 @@
     "babel-loader": "^9.1.3",
     "brotli-webpack-plugin": "^1.1.0",
     "clean-terminal-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "^9.1.0",
