--- a/frontend-react-vanilla-js/tsconfig.json
+++ b/frontend-react-vanilla-js/tsconfig.json
@@ -12,7 +12,11 @@
 
     /* Language and Environment */
     "target": "ES2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-    "lib": ["dom", "dom.iterable", "esnext"] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
     "jsx": "react-jsx" /* Specify what JSX code is generated. */,
     // "experimentalDecorators": true,                   /* Enable experimental support for legacy experimental decorators. */
     // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
@@ -31,7 +35,9 @@
     "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
 
     "paths": {
-      /* Specify a set of entries that re-map imports to additional lookup locations. */ "@pages/*": ["src/pages/*"],
+      /* Specify a set of entries that re-map imports to additional lookup locations. */ "@pages/*": [
+        "src/pages/*"
+      ],
       "@routes/*": ["src/routes/*"],
       "@hooks/*": ["src/hooks/*"],
       "@dialogs/*": ["src/components/dialogs/*"],
