--- a/frontend-react-typescript-tailwind/package.json
+++ b/frontend-react-typescript-tailwind/package.json
@@ -1,37 +1,63 @@
 {
-  "name": "front-end",
+  "name": "some_node",
+  "version": "1.0.0",
+  "description": "Some Node",
+  "main": "./src/index.tsx",
+  "license": "Closed",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build --emptyOutDir --watch --config vite.config.js",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "upgrade": "npx npm-check-updates -u"
+  "author": {
+    "name": "Some Code Developer"
   },
   "dependencies": {
+    "css-loader": "^7.1.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.5",
-    "react-router-dom": "^6.24.0"
+    "react-helmet-async": "^2.0.4",
+    "react-router-dom": "^6.23.0",
+    "style-loader": "^4.0.0",
+    "url-loader": "^4.1.1"
+  },
+  "scripts": {
+    "dev": "webpack --config webpack.config.dev.js",
+    "prd": "webpack --config webpack.config.prd.js",
+    "prettier": "prettier --write .",
+    "upgrade": "npx npm-check-updates -u"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
+    "@babel/core": "^7.24.4",
+    "@babel/eslint-parser": "^7.24.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-top-level-await": "^7.14.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.24.1",
+    "@babel/plugin-transform-runtime": "^7.24.3",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
+    "@statoscope/webpack-plugin": "^5.28.2",
+    "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "brotli-webpack-plugin": "^1.1.0",
+    "clean-terminal-webpack-plugin": "^3.0.0",
     "eslint": "^8.57.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.2",
-    "vite": "^5.3.2",
-    "vite-tsconfig-paths": "^4.3.2"
+    "eslint-webpack-plugin": "^4.1.0",
+    "html-webpack-plugin": "^5.6.0",
+    "node-polyfill-webpack-plugin": "^3.0.0",
+    "prettier": "^3.2.5",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
