Improved Error handling

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@ backend/data/log/audit.json
 backend/public/index.html
 backend/data/log/audit.json
 backend/public/index.html
+backend/public/index.html
